// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color is falsy 1`] = `
<div
  className="icon_placement "
>
  <i
    className="clip fa ICON"
    data-for="UUID_MOCK_KEY_1"
    data-tip="TOOLTEXT"
    style={
      Object {
        "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
      }
    }
  />
  <ReactTooltip
    className="tooltip_box"
    effect="solid"
    id="UUID_MOCK_KEY_1"
    insecure={true}
    place="top"
    resizeHide={true}
    wrapper="div"
  />
</div>
`;

exports[`shallow render 1`] = `
<div
  className="icon_placement "
>
  <i
    className=" fa ICON"
    data-for="UUID_MOCK_KEY_0"
    data-tip="TOOLTEXT"
    style={
      Object {
        "color": "COLOR",
      }
    }
  />
  <ReactTooltip
    className="tooltip_box"
    effect="solid"
    id="UUID_MOCK_KEY_0"
    insecure={true}
    place="top"
    resizeHide={true}
    wrapper="div"
  />
</div>
`;
